fix contrast and font size
fix contrast on info message and font size

--- a/css/screen.css
+++ b/css/screen.css
@@ -475,7 +475,7 @@ hr + h4 { padding-top:20px; }
 	.button:active { position:relative; top:1px; }
 	
 .alert {
-	color:#00468b;
+	color:#fff;
 	background-color:#3498db;
 	font-weight:300;
 	text-decoration:none;
@@ -486,7 +486,7 @@ hr + h4 { padding-top:20px; }
 		margin-right:10px;
 		padding:0 4px;
 		display:inline-block;
-		border: 1px solid #00468b;
+		border: 1px solid #fff;
 		border-radius:16px;
 		font: 1em "andale mono", "lucida console", monospace;
 		
@@ -494,7 +494,7 @@ hr + h4 { padding-top:20px; }
 		-ms-transform: scale(.8); /* IE 9 */
 		-webkit-transform: scale(.8); /* Safari and Chrome */
 		
-		text-shadow:rgba(255,255,255,.4) 0 1px 1px;
+		/*text-shadow:rgba(255,255,255,.4) 0 1px 1px;*/
 		box-shadow:rgba(255,255,255,.4) 0 1px 1px;
 	 }
 	.alert p { margin:0; padding:5px 0; text-shadow:rgba(255,255,255,.4) 0 1px 1px; }
